fixed the message box of the contact page to mimic its container for its width, but smallest device size now breaks the contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,6 +300,13 @@ body {
     width: 80%;
   }
 
+  #messageBox {
+    width: 100%;
+  }
+  textarea {
+    width: 80%;
+  }
+
   input {
     width: 80%;
   }
@@ -415,5 +422,13 @@ body {
   }
   #train {
     margin-left: 30%;
+  }
+  #divider {
+    float: left;
+    margin-top: 50px;
+    width: 100%;
+  }
+  #contact {
+    height: 10px;
   }
 }
